# TxSuite

./: .gitignore  Cargo.toml
migrations/: 0001_txsuite.sql
src/: .gitignore  main.rs
src/database/: types.rs
src/database/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%TxSuite%Cargo.toml  %Users%crypdoughdoteth%dev%active%TxSuite%src%database%types.rs  %Users%crypdoughdoteth%dev%active%TxSuite%src%routes%register.rs  %Users%crypdoughdoteth%dev%active%TxSuite%src%routes%types.rs
src/routes/: mod.rs  register.rs  router.rs  sponsor.rs  types.rs
src/rpc/: methods.rs  types.rs
src/tests/: tests.rs
src/tls/: config.rs  mod.rs  server.rs
src/~/.config/nvim-data/undodir/: %Users%crypdoughdoteth%dev%active%TxSuite%.gitignore  %Users%crypdoughdoteth%dev%active%TxSuite%src%main.rs
