[package]
name = "TxSuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.35.0", features = ["full"]}
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = "0.3.18"
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
